exports[`ItemTitle should render button title 1`] = `
<div
  className="tc-list-item-title">
  <button
    className="my-title btn btn-link"
    disabled={false}
    id="title"
    onClick={[Function]}
    role="link"
    title="Hello world"
    type="button">
    Hello world
  </button>
</div>
`;

exports[`ItemTitle should render icon 1`] = `
<div
  className="tc-list-item-title">
  <i
    aria-hidden="true"
    className="fa fa-file-excel-o tc-list-icon"
    title={null} />
  <span
    className="my-title"
    id={undefined}>
    Hello world
  </span>
</div>
`;

exports[`ItemTitle should render input title 1`] = `
<div
  className="tc-list-item-title">
  <input
    autoFocus={true}
    id="title"
    onBlur={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="Hello world" />
</div>
`;

exports[`ItemTitle should render text title 1`] = `
<div
  className="tc-list-item-title">
  <span
    className="my-title"
    id="title">
    Hello world
  </span>
</div>
`;
